SB-719 - logo size issues on smaller screens (#360)

--- a/src/WebFrontEnd/ClientApp/src/app/modules/home/pages/home/home.component.scss
+++ b/src/WebFrontEnd/ClientApp/src/app/modules/home/pages/home/home.component.scss
@@ -112,7 +112,8 @@ section {
 }
 
 .hero-image {
-    width: 1100px; 
+    max-width: 1100px; 
+    width: 100%;
     height: auto;
 }
 
@@ -146,7 +147,8 @@ section {
     }
 
     .hero-image {
-        width: 900px;
+        max-width: 900px;
+        width: 100%;
     }
 }
 
@@ -169,13 +171,15 @@ section {
     }
 
     .hero-image {
-        width: 600px;
+        max-width: 600px;
+        width: 100%;
     }
 }
 
 @media only screen and (max-width: 468px) {
     .hero-image {
-        width: 350px;
+        max-width: 350px;
+        width: 100%;
         margin-top: 3rem;
     }
 
